BrowseWidget: add spring based navigation to entry grid
Also fix scrolled window input propagation issue

--- a/src/bz-browse-widget.ui
+++ b/src/bz-browse-widget.ui
@@ -8,6 +8,9 @@
         <property name="hscrollbar-policy">never</property>
         <property name="child">
           <object class="GtkListView">
+            <style>
+              <class name="navigation-sidebar"/>
+            </style>
             <property name="model">
               <object class="GtkNoSelection">
                 <binding name="model">
