--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -126,7 +126,7 @@
                                             <child>
                                               <object class="GtkButton">
                                                 <property name="label" translatable="yes">Search</property>
-                                                <property name="action-name">app.search</property>
+                                                <property name="action-name">app.search('')</property>
                                                 <style>
                                                   <class name="pill"/>
                                                 </style>
