--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -9,84 +9,25 @@
     <property name="width-request">400</property>
     <property name="height-request">750</property>
     <property name="content">
-      <object class="AdwBreakpointBin" id="breakpoint_bin">
-        <property name="width-request">400</property>
-        <property name="height-request">750</property>
-        <property name="child">
-          <object class="AdwBottomSheet" id="sheet">
-            <property name="full-width">FALSE</property>
-            <property name="bottom-bar">
-              <object class="GtkCenterBox">
-                <property name="height-request">40</property>
-                <property name="orientation">horizontal</property>
-                <property name="center-widget">
-                  <object class="BzProgressBar">
-                    <property name="vexpand">TRUE</property>
-                    <property name="width-request">300</property>
-                    <property name="margin-top">15</property>
-                    <property name="margin-bottom">15</property>
-                    <property name="margin-start">15</property>
-                    <property name="margin-end">15</property>
-                    <binding name="visible">
-                      <lookup name="active">transaction_mgr</lookup>
-                    </binding>
-                    <binding name="fraction">
-                      <lookup name="current-progress">transaction_mgr</lookup>
-                    </binding>
-                  </object>
-                </property>
-              </object>
-            </property>
-            <property name="sheet">
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkSeparator">
-                    <property name="margin-top">50</property>
-                  </object>
-                </child>
-                <child>
+      <object class="AdwToolbarView">
+        <property name="top-bar-style">raised-border</property>
+        <property name="content">
+          <object class="AdwBreakpointBin" id="breakpoint_bin">
+            <property name="width-request">400</property>
+            <property name="height-request">750</property>
+            <property name="child">
+              <object class="AdwOverlaySplitView" id="split_view">
+                <property name="show-sidebar">FALSE</property>
+                <property name="pin-sidebar">TRUE</property>
+                <property name="sidebar">
                   <object class="BzTransactionManager" id="transaction_mgr">
-                    <property name="width-request">800</property>
+                    <property name="width-request">500</property>
                   </object>
-                </child>
-              </object>
-            </property>
-            <property name="content">
-              <object class="GtkOverlay">
-                <property name="child">
-                  <object class="BzBackground" id="background"/>
                 </property>
-                <child type="overlay">
-                  <object class="AdwToolbarView">
-                    <child type="top">
-                      <object class="AdwHeaderBar">
-                        <child type="start">
-                          <object class="GtkButton" id="refresh">
-                            <property name="icon-name">view-refresh-symbolic</property>
-                          </object>
-                        </child>
-                        <child type="start">
-                          <object class="GtkButton" id="search">
-                            <property name="icon-name">system-search-symbolic</property>
-                          </object>
-                        </child>
-                        <child type="end">
-                          <object class="GtkMenuButton">
-                            <property name="primary">True</property>
-                            <property name="icon-name">open-menu-symbolic</property>
-                            <property name="tooltip-text" translatable="yes">Main Menu</property>
-                            <property name="menu-model">primary_menu</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <property name="content">
-                      <object class="AdwToastOverlay" id="toasts">
-                        <property name="margin-bottom"
-                                  bind-source="sheet"
-                                  bind-property="bottom-bar-height"
-                                  bind-flags="sync-create"/>
+                <property name="content">
+                  <object class="AdwToastOverlay" id="toasts">
+                    <property name="child">
+                      <object class="GtkOverlay">
                         <property name="child">
                           <object class="AdwViewStack" id="main_stack">
                             <property name="enable-transitions">TRUE</property>
@@ -105,46 +46,53 @@
                                 <property name="name">welcome</property>
                                 <property name="title" translatable="yes">Welcome</property>
                                 <property name="child">
-                                  <object class="AdwStatusPage" id="status">
-                                    <property name="title" translatable="yes">Welcome</property>
-                                    <property name="description" translatable="yes">Choose an action:</property>
+                                  <object class="GtkOverlay" id="status">
                                     <property name="child">
-                                      <object class="GtkGrid">
-                                        <property name="halign">center</property>
-                                        <property name="column-spacing">48</property>
-                                        <property name="row-spacing">18</property>
-                                        <child>
-                                          <object class="GtkBox">
-                                            <property name="margin-top">12</property>
-                                            <property name="spacing">12</property>
-                                            <property name="homogeneous">true</property>
-                                            <layout>
-                                              <property name="row">4</property>
-                                              <property name="column">0</property>
-                                              <property name="column-span">2</property>
-                                            </layout>
+                                      <object class="BzBackground" id="background"/>
+                                    </property>
+                                    <child type="overlay">
+                                      <object class="AdwStatusPage">
+                                        <property name="title" translatable="yes">Welcome</property>
+                                        <property name="description" translatable="yes">Choose an action:</property>
+                                        <property name="child">
+                                          <object class="GtkGrid">
+                                            <property name="halign">center</property>
+                                            <property name="column-spacing">48</property>
+                                            <property name="row-spacing">18</property>
                                             <child>
-                                              <object class="GtkButton">
-                                                <property name="label" translatable="yes">Search</property>
-                                                <property name="action-name">app.search('')</property>
-                                                <style>
-                                                  <class name="pill"/>
-                                                </style>
-                                              </object>
-                                            </child>
-                                            <child>
-                                              <object class="GtkButton">
-                                                <property name="label" translatable="yes">Browse</property>
-                                                <property name="action-name">app.browse</property>
-                                                <style>
-                                                  <class name="pill"/>
-                                                </style>
+                                              <object class="GtkBox">
+                                                <property name="margin-top">12</property>
+                                                <property name="spacing">12</property>
+                                                <property name="homogeneous">true</property>
+                                                <layout>
+                                                  <property name="row">4</property>
+                                                  <property name="column">0</property>
+                                                  <property name="column-span">2</property>
+                                                </layout>
+                                                <child>
+                                                  <object class="GtkButton">
+                                                    <property name="label" translatable="yes">Search</property>
+                                                    <property name="action-name">app.search('')</property>
+                                                    <style>
+                                                      <class name="pill"/>
+                                                    </style>
+                                                  </object>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkButton">
+                                                    <property name="label" translatable="yes">Browse</property>
+                                                    <property name="action-name">app.browse</property>
+                                                    <style>
+                                                      <class name="pill"/>
+                                                    </style>
+                                                  </object>
+                                                </child>
                                               </object>
                                             </child>
                                           </object>
-                                        </child>
+                                        </property>
                                       </object>
-                                    </property>
+                                    </child>
                                   </object>
                                 </property>
                               </object>
@@ -167,19 +115,64 @@
                       </object>
                     </property>
                   </object>
-                </child>
+                </property>
               </object>
             </property>
-            <binding name="reveal-bottom-bar">
-              <lookup name="has-transactions">transaction_mgr</lookup>
-            </binding>
+            <child>
+              <object class="AdwBreakpoint" id="breakpoint">
+                <condition>max-width: 750px</condition>
+                <setter object="split_view" property="collapsed">TRUE</setter>
+                <setter object="transaction_mgr" property="width-request">300</setter>
+              </object>
+            </child>
           </object>
         </property>
-        <child>
-          <object class="AdwBreakpoint" id="breakpoint">
-            <condition>max-width: 800px</condition>
-            <setter object="sheet" property="full-width">TRUE</setter>
-            <setter object="transaction_mgr" property="width-request">-1</setter>
+        <child type="top">
+          <object class="AdwHeaderBar">
+            <child type="start">
+              <object class="GtkToggleButton">
+                <property name="icon-name">sidebar-show-symbolic</property>
+                <property name="active"
+                          bind-source="split_view"
+                          bind-property="show-sidebar"
+                          bind-flags="bidirectional|sync-create"/>
+              </object>
+            </child>
+            <child type="start">
+              <object class="GtkButton" id="refresh">
+                <property name="icon-name">view-refresh-symbolic</property>
+              </object>
+            </child>
+            <child type="start">
+              <object class="GtkButton" id="search">
+                <property name="icon-name">system-search-symbolic</property>
+              </object>
+            </child>
+            <child type="end">
+              <object class="GtkMenuButton">
+                <property name="primary">True</property>
+                <property name="icon-name">open-menu-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Main Menu</property>
+                <property name="menu-model">primary_menu</property>
+              </object>
+            </child>
+            <child type="end">
+              <object class="GtkRevealer">
+                <property name="transition-type">crossfade</property>
+                <property name="transition-duration">500</property>
+                <property name="child">
+                  <object class="BzProgressBar">
+                    <property name="valign">center</property>
+                    <binding name="fraction">
+                      <lookup name="current-progress">transaction_mgr</lookup>
+                    </binding>
+                  </object>
+                </property>
+                <binding name="reveal-child">
+                  <lookup name="active">transaction_mgr</lookup>
+                </binding>
+              </object>
+            </child>
           </object>
         </child>
       </object>
