--- a/src/bz-transaction-view.ui
+++ b/src/bz-transaction-view.ui
@@ -17,79 +17,6 @@
             <property name="orientation">vertical</property>
             <property name="spacing">5</property>
             <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="title-3"/>
-                </style>
-                <property name="xalign">0</property>
-                <property name="ellipsize">end</property>
-                <binding name="label">
-                  <lookup name="name" type="BzTransaction">
-                    <lookup name="transaction">BzTransactionView</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="accent"/>
-                  <class name="heading"/>
-                </style>
-                <property name="margin-start">15</property>
-                <property name="margin-top">15</property>
-                <property name="margin-end">15</property>
-                <property name="xalign">0</property>
-                <property name="ellipsize">end</property>
-                <binding name="label">
-                  <lookup name="status" type="BzTransaction">
-                    <lookup name="transaction">BzTransactionView</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <style>
-                  <class name="error"/>
-                  <class name="heading"/>
-                </style>
-                <property name="margin-start">15</property>
-                <property name="margin-end">15</property>
-                <property name="wrap">TRUE</property>
-                <property name="wrap-mode">word-char</property>
-                <property name="xalign">0</property>
-                <binding name="visible">
-                  <closure function="invert_boolean" type="gboolean">
-                    <lookup name="success" type="BzTransaction">
-                      <lookup name="transaction">BzTransactionView</lookup>
-                    </lookup>
-                  </closure>
-                </binding>
-                <binding name="label">
-                  <lookup name="error" type="BzTransaction">
-                    <lookup name="transaction">BzTransactionView</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="BzProgressBar">
-                <property name="hexpand">TRUE</property>
-                <property name="margin-bottom">15</property>
-                <property name="margin-start">15</property>
-                <property name="margin-end">15</property>
-                <binding name="fraction">
-                  <lookup name="progress" type="BzTransaction">
-                    <lookup name="transaction">BzTransactionView</lookup>
-                  </lookup>
-                </binding>
-              </object>
-            </child>
-            <child>
-              <object class="GtkSeparator"/>
-            </child>
-            <child>
               <object class="GtkBox">
                 <property name="hexpand">TRUE</property>
                 <property name="orientation">horizontal</property>
@@ -201,6 +128,89 @@
                 </child>
               </object>
             </child>
+            <child>
+              <object class="GtkSeparator"/>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <style>
+                  <class name="accent"/>
+                  <class name="heading"/>
+                </style>
+                <property name="margin-start">15</property>
+                <property name="margin-top">15</property>
+                <property name="margin-end">15</property>
+                <property name="xalign">0</property>
+                <property name="ellipsize">end</property>
+                <binding name="label">
+                  <lookup name="status" type="BzTransaction">
+                    <lookup name="transaction">BzTransactionView</lookup>
+                  </lookup>
+                </binding>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <style>
+                  <class name="error"/>
+                  <class name="heading"/>
+                </style>
+                <property name="margin-start">15</property>
+                <property name="margin-end">15</property>
+                <property name="wrap">TRUE</property>
+                <property name="wrap-mode">word-char</property>
+                <property name="xalign">0</property>
+                <binding name="visible">
+                  <closure function="invert_boolean" type="gboolean">
+                    <lookup name="success" type="BzTransaction">
+                      <lookup name="transaction">BzTransactionView</lookup>
+                    </lookup>
+                  </closure>
+                </binding>
+                <binding name="label">
+                  <lookup name="error" type="BzTransaction">
+                    <lookup name="transaction">BzTransactionView</lookup>
+                  </lookup>
+                </binding>
+              </object>
+            </child>
+            <child>
+              <object class="BzProgressBar">
+                <property name="hexpand">TRUE</property>
+                <property name="margin-bottom">15</property>
+                <property name="margin-start">15</property>
+                <property name="margin-end">15</property>
+                <binding name="fraction">
+                  <lookup name="progress" type="BzTransaction">
+                    <lookup name="transaction">BzTransactionView</lookup>
+                  </lookup>
+                </binding>
+                <binding name="visible">
+                  <closure function="invert_boolean" type="gboolean">
+                    <lookup name="finished" type="BzTransaction">
+                      <lookup name="transaction">BzTransactionView</lookup>
+                    </lookup>
+                  </closure>
+                </binding>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <style>
+                  <class name="dimmed"/>
+                </style>
+                <property name="margin-bottom">15</property>
+                <property name="margin-start">15</property>
+                <property name="margin-end">15</property>
+                <property name="xalign">0</property>
+                <property name="ellipsize">end</property>
+                <binding name="label">
+                  <lookup name="name" type="BzTransaction">
+                    <lookup name="transaction">BzTransactionView</lookup>
+                  </lookup>
+                </binding>
+              </object>
+            </child>
           </object>
         </property>
       </object>
@@ -220,29 +230,35 @@
         <property name="margin-top">5</property>
         <property name="margin-bottom">5</property>
         <property name="start-widget">
-          <object class="GtkLabel">
-            <style>
-              <class name="heading"/>
-            </style>
-            <property name="hexpand">TRUE</property>
-            <property name="xalign">0</property>
-            <property name="ellipsize">end</property>
-            <property name="single-line-mode">true</property>
-            <binding name="label">
-              <lookup name="title" type="BzEntry">
-                <lookup name="item">GtkListItem</lookup>
-              </lookup>
-            </binding>
-          </object>
-        </property>
-        <property name="end-widget">
-          <object class="GtkImage">
-            <property name="icon-size">large</property>
-            <binding name="paintable">
-              <lookup name="icon-paintable" type="BzEntry">
-                <lookup name="item">GtkListItem</lookup>
-              </lookup>
-            </binding>
+          <object class="GtkBox">
+            <property name="orientation">horizontal</property>
+            <property name="spacing">15</property>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-size">large</property>
+                <binding name="paintable">
+                  <lookup name="icon-paintable" type="BzEntry">
+                    <lookup name="item">GtkListItem</lookup>
+                  </lookup>
+                </binding>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <style>
+                  <class name="heading"/>
+                </style>
+                <property name="hexpand">TRUE</property>
+                <property name="xalign">0</property>
+                <property name="ellipsize">end</property>
+                <property name="single-line-mode">true</property>
+                <binding name="label">
+                  <lookup name="title" type="BzEntry">
+                    <lookup name="item">GtkListItem</lookup>
+                  </lookup>
+                </binding>
+              </object>
+            </child>
           </object>
         </property>
       </object>
