Add commit hash to about and donations link

--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -192,6 +192,10 @@
         <attribute name="label" translatable="yes">_About Bazaar</attribute>
         <attribute name="action">app.about</attribute>
       </item>
+      <item>
+        <attribute name="label" translatable="yes">_Donate ❤️</attribute>
+        <attribute name="action">app.donate</attribute>
+      </item>
     </section>
   </menu>
 </interface>
