--- a/src/bz-section-view.ui
+++ b/src/bz-section-view.ui
@@ -27,45 +27,34 @@
           <object class="GtkOverlay">
             <property name="hexpand">TRUE</property>
             <property name="child">
-              <object class="GtkListView">
-                <property name="css-name">banners</property>
-                <style>
-                  <class name="navigation-sidebar"/>
-                </style>
-                <property name="model">
-                  <object class="GtkNoSelection">
-                    <binding name="model">
-                      <lookup name="images" type="BzContentSection">
+              <object class="GtkRevealer">
+                <property name="height-request">300</property>
+                <property name="transition-type">crossfade</property>
+                <property name="transition-duration">500</property>
+                <binding name="reveal-child">
+                  <lookup name="loaded" type="BzAsyncTexture">
+                    <lookup name="banner" type="BzContentSection">
+                      <lookup name="section">BzSectionView</lookup>
+                    </lookup>
+                  </lookup>
+                </binding>
+                <property name="child">
+                  <object class="GtkPicture">
+                    <property name="css-name">banner</property>
+                    <style>
+                      <class name="browser-banner"/>
+                    </style>
+                    <property name="can-shrink">TRUE</property>
+                    <binding name="paintable">
+                      <lookup name="banner" type="BzContentSection">
                         <lookup name="section">BzSectionView</lookup>
                       </lookup>
                     </binding>
-                  </object>
-                </property>
-                <property name="factory">
-                  <object class="GtkBuilderListItemFactory">
-                    <property name="bytes"><![CDATA[
-<?xml version="1.0" encoding="UTF-8"?>
-<interface>
-  <template class="GtkListItem">
-    <property name="activatable">FALSE</property>
-    <property name="child">
-      <object class="GtkPicture">
-        <property name="css-name">banner</property>
-        <style>
-          <class name="browser-banner"/>
-        </style>
-        <property name="height-request">300</property>
-        <property name="content-fit">cover</property>
-        <property name="can-shrink">TRUE</property>
-        <binding name="paintable">
-          <lookup name="item">GtkListItem</lookup>
-        </binding>
-      </object>
-    </property>
-  </template>
-</interface>
-]]>
-                    </property>
+                    <binding name="content-fit">
+                      <lookup name="banner-fit" type="BzContentSection">
+                        <lookup name="section">BzSectionView</lookup>
+                      </lookup>
+                    </binding>
                   </object>
                 </property>
               </object>
